--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" >
     <head>
+        <meta charset="UTF-8">
         <title>Personal Website</title>
-        <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:wght@100&family=Roboto:wght@100&display=swap" rel="stylesheet">
+        <script src="libs/js/main.js" defer></script>
+        <link rel="stylesheet" href="libs/css/main.css">
     </head>
     <body>
-        <div class="topnav">
+        <div class="sidenav">
+            <a href="mailto:tyrece.jeffrey@gmail.com"target="_blank"><img class="contact"id="email"src="assets/email-12-512.jpg"></a>
+            <a href="https://www.linkedin.com/in/tyrece-jeffrey-0736ba1b0/"target="_blank"rel="noopener noreferrer"><img class="contact"class="contactMiddle"id="linkedIn"src="assets/linkedin-3-512.jpg"></a>
+            <a href="https://github.com/TyreceDJ"target="_blank"rel="noopener noreferrer"><img class="contact"class="contactMiddle"id="gitHub"src="assets/github-10-512.jpg"></a>
+            <a href="https://www.instagram.com/tyrece.jeffrey/"target="_blank"rel="noopener noreferrer"><img class="contact"class="contactMiddle"id="instagram"src="assets/instagram-6-512.jpg"></a>
+            <a href="https://twitter.com/Damastermind1"target="_blank"rel="noopener noreferrer"><img class="contact"id="twitter"src="assets/twitter-512.jpg"></a>
+        </div>
+        <!--<div class="topnav">
             <a class="active" href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#creations">Creations</a>
             <a href="#contact">Contact</a>
-        </div>
-        <div id="home"class="home">
-            <img class="myImage"src="Tyrece_Photo1.jpg"alternate="Picture of Tyrece">
-            <h1 class="homeH1">Hello, I'm<span class="homeSpan"> Tyrece Jeffrey</span></h1>
+        </div>-->
+        <!--<div id="home"class="home">
+            <img class="myImage"src="assets/Tyrece_Photo1.jpg"alternate="Picture of Tyrece">
+            <h1 class="homeH1">Tyrece Jeffrey</h1>
             <p class="homeP">I'm a 17 year old future programer, game designer, and web designer. Here you can find all my creations!</p>
         </div>
         <div id="about"class="about">
@@ -22,13 +31,13 @@
             <p class="aboutP">I'm a Guyanese immigrant living in New Jersey. I'm commited to bettering the world through programming such making electrical 
                 smart devices and wifi more affordable and acessible to everyone around the world. I have made many experimental games and websites that you 
                 can find through this page.</p>
-        </div>
+        </div>-->
         <div id="creations"class="creation">
             <h1 class="creationH1">Creations</h1>
             <p class="creationP">Nothing so far...</p>
         </div>
-        <div id="contact"class="contact">
+        <!--<div id="contact"class="contact">
             <h1 class="contactH1">Contact</h1>
-        </div>
+        </div>-->
     </body>
     </html>
