--- a/index.html
+++ b/index.html
@@ -2,18 +2,27 @@
 <html lang="en" >
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Personal Website</title>
         <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:wght@100&family=Roboto:wght@100&display=swap" rel="stylesheet">
         <script src="libs/js/main.js" defer></script>
-        <link rel="stylesheet" href="libs/css/main.css">
+        <link rel="stylesheet" href="libs/css/styles.css">
     </head>
     <body>
+        <div class="name">
+            <h1>Tyrece Jeffrey</h1>
+        </div>
         <div class="sidenav">
             <a href="mailto:tyrece.jeffrey@gmail.com"target="_blank"><img class="contact"id="email"src="assets/email-12-512.jpg"></a>
-            <a href="https://www.linkedin.com/in/tyrece-jeffrey-0736ba1b0/"target="_blank"rel="noopener noreferrer"><img class="contact"class="contactMiddle"id="linkedIn"src="assets/linkedin-3-512.jpg"></a>
-            <a href="https://github.com/TyreceDJ"target="_blank"rel="noopener noreferrer"><img class="contact"class="contactMiddle"id="gitHub"src="assets/github-10-512.jpg"></a>
-            <a href="https://www.instagram.com/tyrece.jeffrey/"target="_blank"rel="noopener noreferrer"><img class="contact"class="contactMiddle"id="instagram"src="assets/instagram-6-512.jpg"></a>
+            <a href="https://www.linkedin.com/in/tyrece-jeffrey-0736ba1b0/"target="_blank"rel="noopener noreferrer"><img class="contact"id="linkedIn"src="assets/linkedin-3-512.jpg"></a>
+            <a href="https://github.com/TyreceDJ"target="_blank"rel="noopener noreferrer"><img class="contact"id="gitHub"src="assets/github-10-512.jpg"></a>
+            <a href="https://www.instagram.com/tyrece.jeffrey/"target="_blank"rel="noopener noreferrer"><img class="contact"id="instagram"src="assets/instagram-6-512.jpg"></a>
             <a href="https://twitter.com/Damastermind1"target="_blank"rel="noopener noreferrer"><img class="contact"id="twitter"src="assets/twitter-512.jpg"></a>
+        </div>
+        <div class="mobileContact">
+            <a href="https://www.linkedin.com/in/tyrece-jeffrey-0736ba1b0/"target="_blank"rel="noopener noreferrer"><img id="linkedIn"src="assets/icons8-linkedin-48.png"></a>
+            <a href="mailto:tyrece.jeffrey@gmail.com"target="_blank"rel="noopener noreferrer"><img id="email"src="assets/icons8-gmail-48.png"></a>
+            <a href="https://github.com/TyreceDJ"target="_blank"rel="noopener noreferrer"><img id="gitHub"src="assets/icons8-github-48.png"></a>
         </div>
         <!--<div class="topnav">
             <a class="active" href="#home">Home</a>
@@ -31,12 +40,12 @@
             <p class="aboutP">I'm a Guyanese immigrant living in New Jersey. I'm commited to bettering the world through programming such making electrical 
                 smart devices and wifi more affordable and acessible to everyone around the world. I have made many experimental games and websites that you 
                 can find through this page.</p>
-        </div>-->
+        </div>
         <div id="creations"class="creation">
             <h1 class="creationH1">Creations</h1>
             <p class="creationP">Nothing so far...</p>
         </div>
-        <!--<div id="contact"class="contact">
+        <div id="contact"class="contact">
             <h1 class="contactH1">Contact</h1>
         </div>-->
     </body>
