--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
         <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:wght@100&family=Roboto:wght@100&display=swap" rel="stylesheet">
         <script src="libs/js/main.js" defer></script>
         <link rel="stylesheet" href="libs/css/styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
+        <div class="topnav">
+            <a href="#home" class="active">TJ</a>
+            <div id="myLinks">
+                <a href="#news">Skills</a>
+                <a href="#contact">Portfolio</a>
+                <a href="#about">About</a>
+            </div>
+  <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+        </div>
         <div class="name">
             <h1>Tyrece Jeffrey</h1>
         </div>
@@ -24,12 +35,6 @@
             <a href="mailto:tyrece.jeffrey@gmail.com"target="_blank"rel="noopener noreferrer"><img id="email"src="assets/icons8-gmail-48.png"></a>
             <a href="https://github.com/TyreceDJ"target="_blank"rel="noopener noreferrer"><img id="gitHub"src="assets/icons8-github-48.png"></a>
         </div>
-        <!--<div class="topnav">
-            <a class="active" href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#creations">Creations</a>
-            <a href="#contact">Contact</a>
-        </div>-->
         <!--<div id="home"class="home">
             <img class="myImage"src="assets/Tyrece_Photo1.jpg"alternate="Picture of Tyrece">
             <h1 class="homeH1">Tyrece Jeffrey</h1>
