--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,19 +16,21 @@
                 <a href="#news">Skills</a>
                 <a href="#contact">Portfolio</a>
                 <a href="#about">About</a>
+                <a href="#resume">Resume</a>
             </div>
-  <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
             <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
         </div>
         <div class="name">
             <h1>Tyrece Jeffrey</h1>
         </div>
+        <div class="name2">
+        </div>
         <div class="sidenav">
-            <a href="mailto:tyrece.jeffrey@gmail.com"target="_blank"><img class="contact"id="email"src="assets/email-12-512.jpg"></a>
-            <a href="https://www.linkedin.com/in/tyrece-jeffrey-0736ba1b0/"target="_blank"rel="noopener noreferrer"><img class="contact"id="linkedIn"src="assets/linkedin-3-512.jpg"></a>
-            <a href="https://github.com/TyreceDJ"target="_blank"rel="noopener noreferrer"><img class="contact"id="gitHub"src="assets/github-10-512.jpg"></a>
-            <a href="https://www.instagram.com/tyrece.jeffrey/"target="_blank"rel="noopener noreferrer"><img class="contact"id="instagram"src="assets/instagram-6-512.jpg"></a>
-            <a href="https://twitter.com/Damastermind1"target="_blank"rel="noopener noreferrer"><img class="contact"id="twitter"src="assets/twitter-512.jpg"></a>
+            <a href="mailto:tyrece.jeffrey@gmail.com"target="_blank"><img class="contact"id="email"src="assets/icons8-gmail-480.png"></a>
+            <a href="https://www.linkedin.com/in/tyrece-jeffrey-0736ba1b0/"target="_blank"rel="noopener noreferrer"><img class="contact"id="linkedIn"src="assets/icons8-linkedin-480.png"></a>
+            <a href="https://github.com/TyreceDJ"target="_blank"rel="noopener noreferrer"><img class="contact"id="gitHub"src="assets/icons8-github-480.png"></a>
+            <a href="https://www.instagram.com/tyrece.jeffrey/"target="_blank"rel="noopener noreferrer"><img class="contact"id="instagram"src="assets/icons8-instagram-old-208.png"></a>
+            <a href="https://twitter.com/Damastermind1"target="_blank"rel="noopener noreferrer"><img class="contact"id="twitter"src="assets/icons8-twitter-500.png"></a>
         </div>
         <div class="mobileContact">
             <a href="https://www.linkedin.com/in/tyrece-jeffrey-0736ba1b0/"target="_blank"rel="noopener noreferrer"><img id="linkedIn"src="assets/icons8-linkedin-48.png"></a>
