--- a/index.html
+++ b/index.html
@@ -20,11 +20,8 @@
             </div>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
         </div>
-        <div class="name">
-            <h1>Tyrece Jeffrey</h1>
-        </div>
-        <div class="name2">
-        </div>
+        <div class="name"><h1>Tyrece Jeffrey</h1></div>
+        <div class="name2"></div>
         <div class="sidenav">
             <a href="mailto:tyrece.jeffrey@gmail.com"target="_blank"><img class="contact"id="email"src="assets/icons8-gmail-480.png"></a>
             <a href="https://www.linkedin.com/in/tyrece-jeffrey-0736ba1b0/"target="_blank"rel="noopener noreferrer"><img class="contact"id="linkedIn"src="assets/icons8-linkedin-480.png"></a>
