--- a/index.html
+++ b/index.html
@@ -3,77 +3,34 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Personal Website</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:wght@100&family=Roboto:wght@100&display=swap" rel="stylesheet">
+
+    <!--Import JavaScript-->
     <script src="libs/js/main.js" defer></script>
+
+    <!--Import CSS-->
     <link rel="stylesheet" href="libs/css/styles.css">
+    <link rel="stylesheet" href="libs/css/navbar.css">
+
+    <!--Import Font Awesome and More Fonts-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Poppins:wght@400;800&family=Roboto:wght@100&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+
 </head>
 
-<body>
-    <div class="topnav">
-        <a href="#home" class="active">TJ</a>
-        <div id="myLinks">
-            <a href="#news">Skills</a>
-            <a href="#contact">Portfolio</a>
-            <a href="#about">About</a>
-            <a href="#resume">Resume</a>
-        </div>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+<body> 
+    <h1 class="heading">Experience</h1>
+    <div id="navbar">
+        <a class="nav-link" href="#">Project</a>
+        <a class="nav-link" href="#">Experience</a>
+        <a class="nav-link" href="#">Blog</a>
+        <a class="nav-link" href="#">Resume</a>
     </div>
-    <div class="name">
-        <h1>Tyrece Jeffrey</h1>
-    </div>
-    <div class="name2"></div>
-    <div class="sidenav">
-        <a href="mailto:tyrece.jeffrey@gmail.com" target="_blank"><img class="contact" id="email"
-                src="assets/icons8-gmail-480.png"></a>
-        <a href="https://www.linkedin.com/in/tyrece-jeffrey-0736ba1b0/" target="_blank" rel="noopener noreferrer"><img
-                class="contact" id="linkedIn" src="assets/icons8-linkedin-480.png"></a>
-        <a href="https://github.com/TyreceDJ" target="_blank" rel="noopener noreferrer"><img class="contact" id="gitHub"
-                src="assets/icons8-github-480.png"></a>
-        <a href="https://www.instagram.com/tyrece.jeffrey/" target="_blank" rel="noopener noreferrer"><img
-                class="contact" id="instagram" src="assets/icons8-instagram-old-208.png"></a>
-        <a href="https://twitter.com/Damastermind1" target="_blank" rel="noopener noreferrer"><img class="contact"
-                id="twitter" src="assets/icons8-twitter-500.png"></a>
-    </div>
-    <div class="mobileContact">
-        <a href="https://www.linkedin.com/in/tyrece-jeffrey-0736ba1b0/" target="_blank" rel="noopener noreferrer"><img
-                id="linkedIn" src="assets/icons8-linkedin-48.png"></a>
-        <a href="mailto:tyrece.jeffrey@gmail.com" target="_blank" rel="noopener noreferrer"><img id="email"
-                src="assets/icons8-gmail-48.png"></a>
-        <a href="https://github.com/TyreceDJ" target="_blank" rel="noopener noreferrer"><img id="gitHub"
-                src="assets/icons8-github-48.png"></a>
-    </div>
-    <div id="mySidebar" class="sidebar">
-        <a href="#news">Skills</a>
-        <a href="#contact">Portfolio</a>
-        <a href="#about">About</a>
-        <a href="#resume">Resume</a>
-    </div>
-    <div id="main">
-        <button id="openbtn" onclick="openNav()" ></button>
-        <button id="closebtn" onclick="closeNav()"></button>
-    </div>
-    <!--<div id="home"class="home">
-            <img class="myImage"src="assets/Tyrece_Photo1.jpg"alternate="Picture of Tyrece">
-            <h1 class="homeH1">Tyrece Jeffrey</h1>
-            <p class="homeP">I'm a 17 year old future programer, game designer, and web designer. Here you can find all my creations!</p>
-        </div>
-        <div id="about"class="about">
-            <h1 class="aboutH1">About</h1>
-            <p class="aboutP">I'm a Guyanese immigrant living in New Jersey. I'm commited to bettering the world through programming such making electrical 
-                smart devices and wifi more affordable and acessible to everyone around the world. I have made many experimental games and websites that you 
-                can find through this page.</p>
-        </div>
-        <div id="creations"class="creation">
-            <h1 class="creationH1">Creations</h1>
-            <p class="creationP">Nothing so far...</p>
-        </div>
-        <div id="contact"class="contact">
-            <h1 class="contactH1">Contact</h1>
-        </div>-->
 </body>
 
 </html>
