--- a/index.html
+++ b/index.html
@@ -19,17 +19,32 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Poppins:wght@400;800&family=Roboto:wght@100&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400&family=Montserrat:wght@500&family=Poppins:wght@400;800&family=Roboto:wght@100&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
 
 </head>
 
 <body> 
-    <h1 class="heading">Experience</h1>
+    <h1 class="heading">TJ</h1>
     <div id="navbar">
         <a class="nav-link" href="#">Project</a>
         <a class="nav-link" href="#">Experience</a>
         <a class="nav-link" href="#">Blog</a>
         <a class="nav-link" href="#">Resume</a>
+    </div>
+    <div id="personal">
+        <div id="image-border">
+            <div class="top"><h1>Tyrece Jeffrey!</h1></div>
+            <div id="image"></div>
+        </div>
+        <div id="about">
+            <div class="top"><h1>About</h1></div>
+        </div>
+        <div id="mission">
+            <div class="top"><h1>Ambitions</h1></div>
+        </div>
+        <div id="skill">
+            <div class="top"><h1>Skills</h1></div>
+        </div>
     </div>
 </body>
 
