--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <a class="nav-link" href="#">Resume</a>
         </div>
         <div id="contacts">
-            <i class="fa-brands fa-github fa-lg"></i>
-            <i class="fa-brands fa-linkedin-in fa-lg"></i>
+            <a href="https://github.com/TyreceDJ" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a>
+            <a href="https://www.linkedin.com/in/tyrece-jeffrey-0736ba1b0/" target="_blank"><i class="fa-brands fa-linkedin-in fa-lg"></i></a>
             <i class="fa-regular fa-envelope fa-lg"></i>
         </div>
     </div>
@@ -58,36 +58,78 @@
         </div>
     </div>
     <h1 class="heading">Projects</h1>
-    <div class="grid">
+    <div class="grid" id="projects">
+        <div class="card" id="vote">
+            <div class="top"><h1>Vote Today</h1></div>
+            <h1 class="info"></h1> 
+            <div class="skillInfo">JavaScript | HTML | CSS</div>
+            <div class="timeInfo">
+                <h1>Time</h1>
+                <a href="https://github.com/YvonielASC20/voteToday" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a>
+            </div>
+        </div>
         <div class="card" id="cache">
             <div class="top"><h1>Cache</h1></div>
+            <h1 class="info"></h1> 
+            <div class="skillInfo">C</div>
+            <div class="timeInfo"></div>
         </div>
         <div class="card" id="cmd">
             <div class="top"><h1>Command Shell</h1></div>
+            <h1 class="info"></h1> 
+            <div class="skillInfo">C</div>
+            <div class="timeInfo"></div>
         </div>
         <div class="card" id="proxy">
             <div class="top"><h1>Proxy</h1></div>
+            <h1 class="info"></h1> 
+            <div class="skillInfo">C</div>
+            <div class="timeInfo"></div>
         </div>
         <div class="card" id="flag">
             <div class="top"><h1>Flag Quiz</h1></div>
+            <h1 class="info"></h1> 
+            <div class="skillInfo">JavaScript | HTML | CSS</div>
+            <div class="timeInfo">
+                <h1>Time</h1>
+                <a href="https://github.com/TyreceDJ/FlagQuiz" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a>
+            </div>
         </div>
         <div class="card" id="web">
             <div class="top"><h1>Personal Website</h1></div>
+            <h1 class="info"></h1> 
+            <h1 class="skillInfo">HTML | CSS</h1>
+            <div class="timeInfo">
+                <h1>Time</h1>
+                <a href="https://github.com/TyreceDJ/TyreceDJ.github.io" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a>
+            </div>
         </div>
     </div>
     <h1 class="heading">Experience</h1>
     <div class="grid">
         <div class="card" id="allstar">
             <div class="top"><h1>Allstar Code</h1></div>
+            <h1 class="info"></h1> 
+            <div class="skillInfo">JavaScript | HTML | CSS | Google Firebase</div>
+            <div class="timeInfo"></div>
         </div>
         <div class="card" id="course1">
             <div class="top"><h1>15-122</h1></div>
+            <h1 class="info"></h1> 
+            <div class="skillInfo">C</div>
+            <div class="timeInfo"></div>
         </div>
         <div class="card" id="course2">
             <div class="top"><h1>15-213</h1></div>
+            <h1 class="info"></h1> 
+            <div class="skillInfo">C</div>
+            <div class="timeInfo"></div>
         </div>
         <div class="card" id="course3">
             <div class="top"><h1>15-150</h1></div>
+            <h1 class="info"></h1> 
+            <div class="skillInfo">SML</div>
+            <div class="timeInfo"></div>
         </div>
     </div>
 </body>
