--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!--Import JavaScript-->
     <script src="libs/js/main.js" defer></script>
     <script src="https://kit.fontawesome.com/e8a08c4f55.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
     <!--Import CSS-->
     <link rel="stylesheet" href="libs/css/styles.css">
@@ -30,7 +31,7 @@
     <h1 class="heading">TJ</h1>
     <div id="navbar">
         <div id="nav">
-            <a class="nav-link" href="#Projects">Projects</a>
+            <a class="nav-link" href="#projectLink">Projects</a>
             <a class="nav-link" href="#">Experience</a>
             <a class="nav-link" href="#">Blog</a>
             <a class="nav-link" href="#">Resume</a>
@@ -57,7 +58,7 @@
             <div class="top"><h1>Skills</h1></div>
         </div>
     </div>
-    <h1 class="heading">Projects</h1>
+    <h1 class="heading" id="projectLink">Projects</h1>
     <div id="projects">
         <div id="vote">
             <div class="card">
